Fixed popover letter spacing when popover is on a heading

--- a/quartz/styles/fonts.scss
+++ b/quartz/styles/fonts.scss
@@ -54,6 +54,10 @@ h6,
   font-weight: 500;
   line-height: 1.15;
   letter-spacing: -0.022em;
+
+  & .popover {
+    letter-spacing: initial;
+  }
 }
 
 // Directly using CSS variables in SCSS
@@ -212,7 +216,9 @@ article > p:first-of-type {
   }
 
   // Disallow italic font overrides of the smallcaps font
-  & em, b, strong {
+  & em,
+  b,
+  strong {
     font-family: inherit !important;
   }
 
